<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Simple strings. -->
    <string name="decode">Decode</string>
    <string name="snap">Snapshot</string>
    <string name="beep">beep</string>
    <string name="getparam">Get</string>
    <string name="setparam">Set</string>
    <string name="dflparam">Defaults</string>
    <string name="decoding">decoding</string>
    <string name="snapping">taking snapshot</string>
    <string name="pnum">Number</string>
    <string name="pval">Value</string>
    <string name="sdl">SDLtestApp</string>
    <string name="enable">EnableAll</string>
    <string name="disable">DisableAll</string>
    <string name="reading">Reading Pane</string>
    <string name="preview">Preview</string>
    <string name="DecImage">GetDecodedImage</string>
    <string name="stat">status</string>
    <string name="handsfree">Hands Free</string>
    <string name="blank"></string>
    <string name="data">data</string>
    <string name="prop">Properties</string>
    <string name="video">Video</string>
    <string name="Params">Parameters</string>
    <string name="Turbo">Turbo</string>

    <string name="app_name">JDSport-EAN DEV</string>
    <!--<string name="app_name">NPS WM</string>-->
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_transfer_order_adapter">TransferOrderAdapter</string>
    <string name="title_activity_transfer_detail">Confirm Transfer Order</string>
    <string name="title_activity_picking_transfer_detail">Confirm Picking Transfer Order</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="action_settings">Setting URL</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_back">Back</string>
    <string name="action_prev">Prev</string>
    <string name="action_clear">Clear Cache</string>
    <string name="action_font">Font size</string>
    <string name="scan">SCAN</string>
    <string name="confirm">CONFIRM</string>
    <string name="hint_to">Input/Scan your TO Number here</string>
    <string name="hint_batch">Input/Scan your Batch here</string>
    <string name="hint_strbin">Input/Scan your Storage Bin here</string>
    <string name="hint_strg_bin">Input/Scan your Storage bin here</string>
    <string name="hint_staff_id">Input/Scan your Staff ID</string>
    <string name="hint_strg_typ">Input/Scan your Storage Type here</string>
    <string name="hint_mat_num">Input/Scan your Material Number here</string>
    <string name="hint_ean13">Input/Scan your EAN13</string>

    <!--<string name="app_name">Scan test</string>-->
    <string name="decode_results">Scan results:</string>
    <string name="single_shoot">Single scan</string>
    <string name="continuous_shoot">Continuous scan</string>
    <string name="exit_button">Exit</string>
    <string name="clear_button">Clear</string>
    <string name="white_light">Fill light 1</string>
    <string name="read_light">Fill light 2</string>
    <string name="location_light">Normal lamp</string>
    <string name="hard_decode">Hardware decode</string>
    <string name="auto_test">Autotest</string>
    <string name="reference_number">Reference barcode</string>
    <string name="total_of_scaner">Total times</string>
    <string name="total_of_scaner_hint">&gt;1000</string>
    <string name="time_interval">Time interval</string>
    <string name="time_interval_hint">&gt;=200</string>
    <string name="test_result">Test result</string>
    <string name="start_test">Start test</string>
    <string name="stop_test">Stop test</string>
    <string name="test_total">Total: </string>
    <string name="test_success">Success: </string>
    <string name="test_fail">Fail: </string>
    <string name="test_timeout">TimeOut:</string>
    <string name="test_fail_list">Error list</string>
    <string name="settings">Settings</string>
    <string name="scan_total">The total of continuous scan:</string>
    <string name="switch_to_single_scan">Please switch to single scan mode!</string>
    <string name="scan_message">Connect scan head abnormal!</string>
    <string name="dialog_ok">Confirm</string>
    <string name="scan_ring">Tone</string>
    <string name="save_result">Save results</string>
    <string name="saving">Saving, please wait.....</string>
    <string name="save_success">Save successful,located in the "results" directory of the SDCard!</string>
    <string name="save_fail">Save failed, please try again!</string>
    <string name="sdcard_not_exist">SdCard isn`t ready, please disconnect the computer and try again!</string>
    <string name="not_blank">Can not be empty!</string>
    <string name="error_input">Enter a appropriate values!</string>
    <string name="try_again">Please try again!</string>
    <string name="average_time">The average time is %1$f ms.</string>
    <string name="error_message_symbol_settings">Symbol settings could not be reflected</string>

</resources>